# DRF-Practice

./: .coveragerc  .env.example  .gitignore  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1df033120bbcc412_create_moderators_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_cf086e70c716a445_fill_test_data_py.html  z_e7c45762ecaa8ffb_models_py.html  z_e7c45762ecaa8ffb_paginators_py.html  z_e7c45762ecaa8ffb_serializers_py.html  z_e7c45762ecaa8ffb_tests_py.html  z_e7c45762ecaa8ffb_urls_py.html  z_e7c45762ecaa8ffb_validators_py.html  z_e7c45762ecaa8ffb_views_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_tests_py.html  z_f6c68bdc9becfc1e_urls_py.html  z_f6c68bdc9becfc1e_views_py.html
lms/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/management/commands/: fill_test_data.py
lms/migrations/: 0001_initial.py  0002_course_owner.py  0003_subscription.py  0004_course_stripe_price_id.py  0005_course_last_update.py
lms/services/: stripe_service.py
users/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: create_moderators.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_options_alter_user_managers.py
